infrastructure/longhorn/test-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-test-pod
  namespace: default
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          echo "Longhorn PVC mounted at /data"
          date > /data/longhorn-test.txt
          cat /data/longhorn-test.txt
          sleep 3600
      volumeMounts:
        - name: test-data
          mountPath: /data
  volumes:
    - name: test-data
      persistentVolumeClaim:
        claimName: longhorn-test-pvc
---
# Verification commands:
#
# kubectl apply -f infrastructure/longhorn/test-pvc.yaml
# kubectl get pvc longhorn-test-pvc -n default
# kubectl get pod longhorn-test-pod -n default
# kubectl exec -n default longhorn-test-pod -- cat /data/longhorn-test.txt
# kubectl delete -f infrastructure/longhorn/test-pvc.yaml
